plugins {
    alias(libs.plugins.android.application)
}

android {
    namespace 'com.yuanze31.splatooninfo'
    compileSdk 34

    defaultConfig {
        applicationId "com.yuanze31.splatooninfo"
        minSdk 24
        targetSdk 34
        versionCode 1
        versionName '1.0-alpha.1'

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
    buildFeatures {
        viewBinding true
    }
}

dependencies {

    implementation libs.appcompat
    implementation libs.material
    implementation libs.constraintlayout
    implementation libs.lifecycle.livedata.ktx
    implementation libs.lifecycle.viewmodel.ktx
    implementation libs.navigation.fragment
    implementation libs.navigation.ui
    testImplementation libs.junit
    androidTestImplementation libs.ext.junit
    androidTestImplementation libs.espresso.core

    implementation libs.okhttp
    implementation 'com.google.code.gson:gson:2.10.1'
}